2003-10-21  Elizabeth Thomas <eathomas93@aol.com>

	* nsd/init.tcl: Removing lazyproc code from 4.0 to enable it
        to be declared GM. Solution is being refined and may be added 
        in later release or add-on module. 

2003-10-14  Paul Moosman <pwmoosman@aol.com>

	* nsd/tcljob.c: Fix to ns_job, where it was attempting to access
        a deleted queue.

2003-10-09  Mark Page  <mpagenva@aol.com>

        * TAG aolserver_v4_r0_beta_18
	
2003-10-09  Elizabeth Thomas <eathomas93@aol.com>

        * nsd/init.tcl: Fix syntax error in check for null proc.

2003-10-08  Mark Page  <mpagenva@aol.com>

        * TAG aolserver_v4_r0_beta_17
	
	* nsd/init.tcl (ns_eval): Minor change to track change to ns_job.

2003-10-08  Paul Moosman <pwmoosman@aol.com>

	* nsd/tcljob.c: Minor change to ns_job joblist return to be
        consistent with similar aolserver api's.

2003-10-07  Mark Page  <mpagenva@aol.com>

        * TAG aolserver_v4_r0_beta_16
	
	* nsd/init.tcl (ns_eval): The early 4.0 ns_eval had been
	waiting for the completion of integrating script changes into the
	server's init script.  This change adds the ability to return
	without waiting for the init script integration completion (as the
	default).  A new switch modifies this behavior to force it to wait
	for the completion of init script integration.  Added another
	switch to request a report of ns_eval backlog.

	* nsd/adpeval.c (LogError): Limit the amount of script text added
	into the errorInfo string, to keep from flowing adp script texts
	of unlimited length into the server log.

2003-10-06  Paul Moosman <pwmoosman@aol.com>

	* nsd/tcljob.c: Replaced ctime_r with ns_ctime to fix a win32
	compile problem. This change should fix bug #811802.
	Fixed a potential deadlock case.
	Fixed a problem where the maxthreads option was getting ignored.

2003-10-01  Elizabeth Thomas <eathomas93@aol.com>

        * nsd/init.tcl: Fix to _ns_lzproc_load to handle subtle behavior with